--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/core": "^10.7.0",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
+    "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "media-icons": "^1.0.0",
     "moment": "^2.29.4",
